--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">Голицын Игорь</string>
-    <string name="mobile_number">+7(905)8334750</string>
+    <string name="mobile_number">+7(905)833-47-50</string>
+    <string name="mobile_number_string">Мобильный</string>
     <string name="email">polus79@mail.ru</string>
+    <string name="email_string">E-mail</string>
     <string name="profile_vk">https://vk.com/igolitsyn</string>
+    <string name="profile_vk_String">Профиль в VK</string>
     <string name="github_repo">https://github.com/Igor-Golitsyn/DevIntensive</string>
+    <string name="github_repo_string">Репозиторий</string>
+    <string name="about">I study java</string>
+    <string name="about_string">О себе</string>
+
 </resources>
