--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,14 @@
     <string name="profile_vk_String">Профиль в VK</string>
     <string name="github_repo">https://github.com/Igor-Golitsyn/DevIntensive</string>
     <string name="github_repo_string">Репозиторий</string>
-    <string name="about">I study java \n 1 \n 2 \n 3 \n 4\n 5\n 6</string>
+    <string name="about">I study java \n 1 \n 2 \n 3 \n 4 \n 5 \n 6</string>
     <string name="about_string">О себе</string>
-
+    <string name="reiting_value">5</string>
+    <string name="reiting_name">Ретинг</string>
+    <string name="lines_code_value">5</string>
+    <string name="lines_code_name">Написано строк кода</string>
+    <string name="projects_value">5</string>
+    <string name="projects_name">Проектов</string>
+    <string name="my_profile">Мой профиль</string>
+    <string name="my_team">Команда</string>
 </resources>
