--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Голицын Игорь</string>
-    <string name="mobile_number">+7 905 8 33-47-50</string>
+    <string name="mobile_number">+7 905 8 33-47-509</string>
     <string name="mobile_number_string">Мобильный</string>
-    <string name="email">polus79@mail.ru</string>
+    <string name="email">polus79@mail.ru9</string>
     <string name="email_string">E-mail</string>
-    <string name="profile_vk">vk.com/igolitsyn</string>
+    <string name="profile_vk">vk.com/igolitsyn9</string>
     <string name="profile_vk_String">Профиль в VK</string>
-    <string name="github_repo">github.com/Igor-Golitsyn/DevIntensive</string>
+    <string name="github_repo">github.com/Igor-Golitsyn/DevIntensive9</string>
     <string name="github_repo_string">Репозиторий</string>
-    <string name="about">I study java \n 1 \n 2 \n 3 \n 4 \n 5 \n 6</string>
+    <string name="about">I study java \n 1 \n 2 \n 3 \n 4 \n 5 \n 69</string>
     <string name="about_string">О себе</string>
     <string name="reiting_value">5</string>
     <string name="reiting_name">Ретинг</string>
